fixed z-index on selectboxes

--- a/app/assets/stylesheets/crumblin/crumblin.sass
+++ b/app/assets/stylesheets/crumblin/crumblin.sass
@@ -541,6 +541,7 @@ button,
         +bg_gradient(#f2f8fd,#d7eaf8)
         color: #09558a
         height: auto
+        z-index: 10
         
         &:before
           border-top-color: #5A96C6
