--- a/app/assets/stylesheets/subdomains/community.sass
+++ b/app/assets/stylesheets/subdomains/community.sass
@@ -551,6 +551,7 @@ body
               +bg_gradient(#FDF3EE,#F2E5E1)
               color: #580B15
               height: auto
+              z-index: 10
             
               li
               
